[package]
name = "acyc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-codecs.workspace = true

# ethereum
alloy-primitives = { workspace = true, features = ["rand", "rlp"] }
alloy-genesis.workspace = true

# misc
bytes.workspace = true
byteorder = "1"

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
zstd = { version = "0.13", features = ["experimental"] }
alloy-rlp.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
proptest = { workspace = true }
proptest-derive = { version = "0.4.0" }
modular-bitfield = "0.11.2"



