[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-engine-primitives"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-primitives.workspace = true
reth-rpc-types.workspace = true

# misc
serde.workspace = true
thiserror.workspace = true
