[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-node-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-beacon-consensus.workspace = true
reth-config.workspace = true
reth-consensus-common.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-discv4.workspace = true
reth-discv5.workspace = true
reth-engine-primitives.workspace = true
reth-fs-util.workspace = true
reth-interfaces = { workspace = true, features = ["clap"] }
reth-net-nat.workspace = true
reth-network = { workspace = true, features = ["serde"] }
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-api = { workspace = true, features = ["client"] }
reth-rpc-builder.workspace = true
reth-rpc-types-compat.workspace = true
reth-rpc-types.workspace = true
reth-rpc.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true

# ethereum
alloy-rpc-types-engine.workspace = true

# ethereum
discv5.workspace = true

# async
pin-project.workspace = true
tokio-util.workspace = true
tokio.workspace = true

# metrics
metrics-exporter-prometheus = "0.12.1"
metrics-process = "=1.0.14"
metrics-util = "0.15.0"
metrics.workspace = true
once_cell.workspace = true
reth-metrics.workspace = true

# misc
clap = { workspace = true, features = ["derive"] }
const-str = "0.5.6"
derive_more.workspace = true
eyre.workspace = true
humantime.workspace = true
rand.workspace = true
thiserror.workspace = true

# io
dirs-next = "2.0.0"
serde.workspace = true
serde_json.workspace = true
shellexpand = "3.0.0"

# http/rpc
hyper.workspace = true

# tracing
tracing.workspace = true

# crypto
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

# async
futures.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.5.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16.0"

[dev-dependencies]
# test vectors generation
assert_matches.workspace = true
jsonrpsee.workspace = true
proptest.workspace = true
tempfile.workspace = true

[features]
optimism = [
    "reth-beacon-consensus/optimism",
    "reth-primitives/optimism",
    "reth-provider/optimism",
    "reth-rpc-types-compat/optimism",
    "reth-rpc/optimism",
]

jemalloc = ["dep:tikv-jemalloc-ctl"]

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }
