[package]
description = "Common types in reth."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-primitives-traits"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
reth-codecs.workspace = true

alloy-consensus = { workspace = true, features = ["serde"] }
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

revm-primitives = { workspace = true, features = ["serde"] }

# misc
byteorder = "1"
derive_more.workspace = true
roaring = "0.10.2"
serde_with = { workspace = true, optional = true }

irys-primitives.workspace = true

# required by reth-codecs
bytes.workspace = true
modular-bitfield.workspace = true
serde.workspace = true

# arbitrary utils
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-arbitrary-interop = { workspace = true, optional = true }

[dev-dependencies]
reth-testing-utils.workspace = true

alloy-consensus = { workspace = true, features = ["arbitrary"] }
alloy-primitives = { workspace = true, features = ["arbitrary"] }

arbitrary = { workspace = true, features = ["derive"] }
bincode.workspace = true
proptest-arbitrary-interop.workspace = true
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
test-fuzz.workspace = true

[features]
arbitrary = [
    "alloy-consensus/arbitrary",
    "alloy-primitives/arbitrary",
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
    "std",
]
default = ["std"]
serde-bincode-compat = ["alloy-consensus/serde-bincode-compat", "serde_with"]
std = []
test-utils = ["arbitrary"]
