[package]
description = "Commonly used types in reth."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-primitives"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-codecs.workspace = true
reth-ethereum-forks.workspace = true
reth-network-types.workspace = true
reth-static-file-types.workspace = true
revm-primitives = { workspace = true, features = ["serde"] }
revm.workspace = true

# ethereum
alloy-chains = { workspace = true, features = ["rlp", "serde"] }
alloy-eips = { workspace = true, features = ["serde"] }
alloy-genesis.workspace = true
alloy-primitives = { workspace = true, features = ["rand", "rlp"] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-rpc-types = { workspace = true, optional = true }
alloy-serde = { workspace = true }
alloy-trie = { workspace = true, features = ["serde"] }
nybbles = { workspace = true, features = ["rlp", "serde"] }

# crypto
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "recovery",
] }
# for eip-4844
c-kzg = { workspace = true, features = ["serde"], optional = true }

# misc
byteorder = "1"
bytes.workspace = true
derive_more.workspace = true
itertools.workspace = true
modular-bitfield.workspace = true
once_cell.workspace = true
rayon.workspace = true
roaring = "0.10.2"
serde.workspace = true
serde_json.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
zstd = { version = "0.13", features = ["experimental"], optional = true }

# `test-utils` feature
hash-db = { version = "~0.15", optional = true }
plain_hasher = { version = "0.2", optional = true }

# arbitrary utils
arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[dev-dependencies]
# eth
alloy-eips = { workspace = true, features = ["arbitrary"] }
alloy-trie = { workspace = true, features = ["arbitrary"] }
nybbles = { workspace = true, features = ["arbitrary"] }
revm-primitives = { workspace = true, features = ["arbitrary"] }

arbitrary = { workspace = true, features = ["derive"] }
assert_matches.workspace = true
proptest-derive.workspace = true
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
test-fuzz.workspace = true
toml.workspace = true
triehash = "0.8"

hash-db = "~0.15"
plain_hasher = "0.2"

sucds = "0.8.1"

criterion.workspace = true
pprof = { workspace = true, features = [
    "criterion",
    "flamegraph",
    "frame-pointer",
] }

[features]
alloy-compat = ["alloy-rpc-types"]
arbitrary = [
    "alloy-chains/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-trie/arbitrary",
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
    "nybbles/arbitrary",
    "reth-ethereum-forks/arbitrary",
    "revm-primitives/arbitrary",
    "zstd-codec",
]
asm-keccak = ["alloy-primitives/asm-keccak"]
c-kzg = [
    "alloy-eips/kzg",
    "dep:c-kzg",
    "dep:tempfile",
    "revm-primitives/c-kzg",
    "revm/c-kzg",
]
clap = ["reth-static-file-types/clap"]
default = ["c-kzg", "zstd-codec"]
optimism = [
    "reth-codecs/optimism",
    "reth-ethereum-forks/optimism",
    "revm/optimism",
]
test-utils = ["dep:hash-db", "dep:plain_hasher"]
zstd-codec = ["dep:zstd"]

[[bench]]
harness = false
name = "recover_ecdsa_crit"

[[bench]]
harness = false
name = "validate_blob_tx"
required-features = ["arbitrary", "c-kzg"]

[[bench]]
harness = false
name = "trie_root"
required-features = ["arbitrary", "test-utils"]

[[bench]]
harness = false
name = "integer_list"
