[package]
description = "reth specific revm utilities"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-revm"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
alloy-primitives.workspace = true
reth-chainspec.workspace = true
reth-consensus-common.workspace = true
reth-execution-errors.workspace = true
reth-primitives.workspace = true
reth-prune-types.workspace = true
reth-storage-api.workspace = true
reth-storage-errors.workspace = true
reth-trie = { workspace = true, optional = true }
# common
tracing.workspace = true

# revm
revm.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
reth-ethereum-forks.workspace = true
reth-trie.workspace = true

[features]
c-kzg = ["revm/c-kzg"]
default = ["c-kzg", "std"]
optimism = ["revm/optimism"]
serde = ["revm/serde"]
std = []
test-utils = ["dep:reth-trie"]
