[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-cli"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
# reth
reth-cli-runner.workspace = true

alloy-genesis.workspace = true
irys-primitives.workspace = true

# misc
clap.workspace = true
eyre.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
