[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-cli-runner"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-node-core.workspace = true
reth-tasks.workspace = true

# async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }

# misc
tracing.workspace = true
