[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-ethereum-engine-primitives"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
alloy-rlp.workspace = true
reth-engine-primitives.workspace = true
reth-primitives.workspace = true
reth-rpc-types-compat.workspace = true
reth-rpc-types.workspace = true
revm-primitives.workspace = true

# misc
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
