[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-evm-ethereum"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-ethereum-consensus.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
tracing.workspace = true
# Ethereum
revm-primitives.workspace = true

[dev-dependencies]
alloy-eips.workspace = true
reth-revm = { workspace = true, features = ["test-utils"] }
