[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-evm-ethereum"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-ethereum-consensus.workspace = true
reth-ethereum-forks.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-primitives = { workspace = true, features = ["reth-codec"] }
reth-prune-types.workspace = true
reth-revm.workspace = true

# Ethereum
revm-primitives.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

tracing.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-genesis.workspace = true
reth-primitives = { workspace = true, features = ["secp256k1"] }
reth-revm = { workspace = true, features = ["test-utils"] }
reth-testing-utils.workspace = true
secp256k1.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = []
