[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-node-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-cli-util.workspace = true
reth-config.workspace = true
reth-consensus-common.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-discv4.workspace = true
reth-discv5.workspace = true
reth-net-nat.workspace = true
reth-network = { workspace = true, features = ["serde"] }
reth-network-p2p.workspace = true
reth-network-peers.workspace = true
reth-primitives.workspace = true
reth-prune-types.workspace = true
reth-rpc-api = { workspace = true, features = ["client"] }
reth-rpc-eth-api = { workspace = true, features = ["client"] }
reth-rpc-eth-types.workspace = true
reth-rpc-server-types.workspace = true
reth-rpc-types-compat.workspace = true
reth-stages-types.workspace = true
reth-storage-api.workspace = true
reth-storage-errors.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true

irys-types = { path = "../../../../../crates/types" }
# ethereum
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt"] }

# misc
clap = { workspace = true, features = ["derive"] }
const_format.workspace = true
derive_more.workspace = true
eyre.workspace = true
humantime.workspace = true
rand.workspace = true
serde.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
# io
dirs-next = "2.0.0"
shellexpand.workspace = true

# tracing
tracing.workspace = true

# crypto
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

# async
futures.workspace = true

[dev-dependencies]
# test vectors generation
proptest.workspace = true
tempfile.workspace = true
tokio.workspace = true

[features]
optimism = ["reth-primitives/optimism"]
# Features for vergen to generate correct env vars
asm-keccak = []
jemalloc = []

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }
