[package]
description = "Implementation of Engine API"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-rpc-engine-api"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-beacon-consensus.workspace = true
reth-engine-primitives.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types-compat.workspace = true
reth-rpc-types.workspace = true
reth-tasks.workspace = true

# async
tokio = { workspace = true, features = ["sync"] }

# metrics
metrics.workspace = true
reth-metrics.workspace = true

# misc
async-trait.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
[dev-dependencies]
reth-ethereum-engine-primitives.workspace = true
reth-interfaces = { workspace = true, features = ["test-utils"] }
reth-payload-builder = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-tokio-util.workspace = true

alloy-rlp.workspace = true

assert_matches.workspace = true

[features]
optimism = ["reth-primitives/optimism"]
