[package]
description = "Implementation of Engine API"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-rpc-engine-api"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-beacon-consensus.workspace = true
reth-chainspec.workspace = true
reth-engine-primitives.workspace = true
reth-evm.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types-compat.workspace = true
reth-storage-api.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true

eyre.workspace = true
serde_json.workspace = true

# ethereum
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jsonrpsee-types"] }

# async
tokio = { workspace = true, features = ["sync"] }

# metrics
metrics.workspace = true
reth-metrics.workspace = true

# misc
async-trait.workspace = true
jsonrpsee-core.workspace = true
jsonrpsee-types.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
reth-ethereum-engine-primitives.workspace = true
reth-payload-builder = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-testing-utils.workspace = true
reth-tokio-util.workspace = true

alloy-rlp.workspace = true

assert_matches.workspace = true
