[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-codecs"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
# reth-acyc-primitives.workspace = true
reth-codecs-derive = { path = "./derive", default-features = false }
# eth
alloy-eips = { workspace = true, optional = true }
alloy-genesis = { workspace = true, optional = true }
alloy-primitives.workspace = true

# misc
bytes.workspace = true
modular-bitfield = { workspace = true, optional = true }
serde.workspace = true

[dev-dependencies]
alloy-eips = { workspace = true, default-features = false, features = [
    "arbitrary",
    "serde",
] }
alloy-primitives = { workspace = true, features = ["arbitrary", "serde"] }
serde_json.workspace = true
test-fuzz.workspace = true

arbitrary = { workspace = true, features = ["derive"] }
proptest-derive.workspace = true
proptest.workspace = true

[features]
alloy = ["dep:alloy-eips", "dep:alloy-genesis", "dep:modular-bitfield"]
default = ["alloy", "std"]
optimism = ["reth-codecs-derive/optimism"]
std = ["alloy-primitives/std", "bytes/std"]
