[package]
description = "Reth storage provider."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-provider"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-blockchain-tree-api.workspace = true
reth-codecs.workspace = true
reth-db.workspace = true
reth-evm.workspace = true
reth-execution-errors.workspace = true
reth-fs-util.workspace = true
reth-interfaces.workspace = true
reth-nippy-jar.workspace = true
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-storage-errors.workspace = true
reth-trie = { workspace = true, features = ["metrics"] }

# ethereum
alloy-rpc-types-engine.workspace = true
revm.workspace = true

# async
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }

# tracing
tracing.workspace = true

# metrics
metrics.workspace = true
reth-metrics.workspace = true

# misc
auto_impl.workspace = true
dashmap = { workspace = true, features = ["inline"] }
itertools.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
strum.workspace = true

# test-utils
alloy-rlp = { workspace = true, optional = true }

# parallel utils
rayon.workspace = true

[dev-dependencies]
reth-db = { workspace = true, features = ["test-utils"] }
reth-interfaces = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["arbitrary", "test-utils"] }
reth-trie = { workspace = true, features = ["test-utils"] }

alloy-rlp.workspace = true
assert_matches.workspace = true
parking_lot.workspace = true
rand.workspace = true
tempfile.workspace = true

[features]
optimism = ["reth-primitives/optimism"]
test-utils = ["alloy-rlp", "reth-db/test-utils", "reth-nippy-jar/test-utils"]
