[package]
description = "Commonly used types for trie usage in reth."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "reth-trie-common"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
reth-codecs.workspace = true
reth-primitives-traits.workspace = true

alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-trie = { workspace = true, features = ["serde"] }
irys-primitives.workspace = true
revm-primitives.workspace = true

bytes.workspace = true
derive_more.workspace = true
itertools.workspace = true
nybbles = { workspace = true, features = ["rlp", "serde"] }
serde.workspace = true

# `test-utils` feature
arbitrary = { workspace = true, features = ["derive"], optional = true }
hash-db = { version = "=0.15.2", optional = true }
plain_hasher = { version = "0.2", optional = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
hash-db = "=0.15.2"
plain_hasher = "0.2"
proptest-arbitrary-interop.workspace = true
proptest.workspace = true

[features]
arbitrary = ["alloy-trie/arbitrary", "dep:arbitrary"]
test-utils = ["arbitrary", "dep:hash-db", "dep:plain_hasher"]
